fixed icon name misalignment and added Sass skill

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav li:first-child {
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 50px;
 }
@@ -169,6 +169,7 @@ nav li:first-child {
 }
 
 .hero-p {
+    min-width: 100px;
     max-width: 552px;
 }
 
@@ -236,14 +237,17 @@ nav li:first-child {
     height: auto;
     /* border: 1px  solid rgb(0, 255, 34); */
     padding: 10px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     justify-items: center;
     align-items: center;
+    flex-wrap: nowrap;
 }
 
 .icon {
-    min-width: 24px;
-    max-width: 50px;
+    min-width: 20px;
+    max-width: 40px;
 }
 
 /* Project section */
@@ -375,7 +379,8 @@ footer {
     }
 
     .hero-p {
-        min-width: 700px;
+
+        max-width: 700px;
     }
 
     .about-title,
